--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "green-reg-exp",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "A little library for parsing and manipulating regular expressions.",
   "homepage": "https://github.com/qntm/green-reg-exp",
   "repository": {
     "type": "git",
     "url": "git://github.com/qntm/green-reg-exp.git"
   },
+  "type": "module",
   "main": "src/green-reg-exp.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "jasmine": "jasmine",
+    "mocha": "c8 --100 mocha",
     "postpublish": "npm version patch && git push",
     "standard": "standard",
-    "test": "npm run jasmine -- **/*.spec.js"
+    "test": "npm run standard && npm run mocha"
   },
   "keywords": [
     "regular",
@@ -28,7 +26,8 @@
     "url": "https://github.com/qntm/green-reg-exp/issues"
   },
   "devDependencies": {
-    "jasmine": "^4.0.2",
+    "c8": "^7.11.3",
+    "mocha": "^10.0.0",
     "standard": "^17.0.0"
   },
   "dependencies": {
