--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "main": "src/green-reg-exp.js",
   "scripts": {
-    "unit": "c8 --100 node --test",
+    "unit": "node --test --experimental-test-coverage",
     "postpublish": "npm version patch && git push",
     "standard": "standard",
     "test": "npm run standard && npm run unit"
@@ -26,7 +26,6 @@
     "url": "https://github.com/qntm/green-reg-exp/issues"
   },
   "devDependencies": {
-    "c8": "^10.1.2",
     "standard": "^17.0.0"
   },
   "dependencies": {
